Reports alignment fix.

--- a/public/src/falcon/falcon-reports.scss
+++ b/public/src/falcon/falcon-reports.scss
@@ -689,3 +689,8 @@ $link-color-reports: #239cff;
 		}
 	}
 }
+
+
+.helpkit-glance .glance-chart-wrapper .glance-chart .solution-article {
+    padding-top: 0;
+}
